--- a/css/main.css
+++ b/css/main.css
@@ -1,43 +1,31 @@
-body {
-    margin: 60px auto;
-    width: 70%;
+/*stylesheet for page*/
+
+* {
+	font-family: Verdana, Geneva, sans-serif;	
 }
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
-}
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
-}
-a {
-    text-decoration: none;
-    color: #999;
-}
-a:hover {
-    text-decoration: underline;
-}
-h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
-}
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
+#lsb {
+	position: fixed;
+	height:100%;
+	width: 250px;
+	border: 2px solid red;
 }
 
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
+.main{
+	position: relative;
+	margin-left: 250px;
+	border: 2px solid blue;
+	height: 100%;
 }
 
-ul.posts li {
-    list-style: none;
+#foot {
+	position: absolute;
+	margin-left: 250px;
+	height: 40px;
+	clear: both;
+	border: 2px solid black;
+}
+
+#avatar {
+	width: 100px;
+	border-radius: 10%;
 }
