--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,18 +2,20 @@
 <html>
         <head>
 		<title>{{page.title}}</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+
         </head>
 
         <body>
                 <div id="lsb"> <!--lsb = left sidebar -->
-                        <img id="avatar" src="file:////Users/matejpribis/Documents/page/pribism.github.io/pictures/fotoatelier1ed.jpg">
+                        <img id="avatar" src="/pictures/fotoatelier1ed.jpg">
                         <h3 id="name">Matej Pribiš</h3>
                         <h3 id="uni">MD Student at Charles University in Prague</h3>
                         <br></br>
                         <ul>
-                                <li><a href="file:////Users/matejpribis/Documents/page/pribism.github.io/index.html">Home</a></li>
+                                <li><a href="/index.html">Home</a></li>
                                 <li><a href="/about.html">About</a></li>
-                                <li><a href="/Blog.html">Blog</a></li>
+                                <li><a href="/blog">Blog</a></li>
                                 <li><a href="/index.html">My CV</a></li>
                         </ul>
                 </div>
