--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,9 @@
                                 <li><a href="/index.html">My CV</a></li>
                         </ul>
                 </div>
-                
+                	<div class="main">
 			{{ content }}
-     
+     			</div>
                 <div id="foot">
                         <a href=""></a>
                         <a href=""></a>
