index - added div
deleted borders, added footer, changing single paragraphs to div on
main page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,8 @@
 			{{ content }}
      
                 <div id="foot">
-                        <a href=""></a>
-                        <a href=""></a>
+                        <a href="mailto:matejpribis@gmail.com">mail</a>
+			<!--<a href=""></a>-->
 
                 </div>
         </body>
