--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
 	position: fixed;
 	height:100%;
 	width: 250px;
-	border: 2px solid red;
+	/**border: 2px solid red;**/
 	padding-top: 30px;
 	padding-bottom: 30px;
 	background-color: #032149;
@@ -28,7 +28,7 @@ body {
 	position: relative;
 	margin-left: 250px;
 	padding: 50px;
-	border: 2px solid blue;
+	/**border: 2px solid blue;**/
 	height: 100%;
 	background-color: #e5e5e5;
 }
@@ -38,7 +38,7 @@ body {
 	margin-left: 250px;
 	height: 40px;
 	clear: both;
-	border: 2px solid black;
+	/**border: 2px solid black;**/
 }
 
 #avatar {
@@ -96,23 +96,12 @@ p {
 	display: block-inline;
 }
 
-.main h1 {
+.main div {
 	position: absolute;
 	bottom: 450px;
 	left: 550px;
 }
 
-p.top {
-	position: absolute;
-	top: 100px;
-	left: 600px;
-}
-
-p.bottom {
-	position: absolute;
-	top: 200px;
-	left: 600px;
-}
 
 .main img {
 	width:400px;
