--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
         <head>
 		<title>{{page.title}}</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" href="/font-awesome-4.5.0/css/font-awesome.min.css">
 
         </head>
 
@@ -23,7 +24,7 @@
 			{{ content }}
      			</div>
                 <div id="foot">
-                        <a href="mailto:matejpribis@gmail.com">mail</a>
+			<a href="mailto:matejpribis@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
 			<!--<a href=""></a>-->
 
                 </div>
