--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ p {
 
 .main #indexm {
 	position: absolute;
-	bottom: 200px;
+	top: 100px;
 	left: 550px;
 }
 
@@ -114,5 +114,6 @@ p {
 }
 
 #foot a {
-	margin: 30px;	
+	margin: 30px;
+	text-align: center;	
 }
