--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,10 @@
                         <h3 id="uni">MD Student at Charles University in Prague</h3>
                         <br></br>
                         <ul>
-                                <li><a href="/index.html">Home</a></li>
-                                <li><a href="/about.html">About</a></li>
+				<li><a href="/index.html"><i class="fa fa-home fa-fw"></i>&nbsp; Home</a></li>
+                                <li><a href="/index.html">About</a></li>
                                 <li><a href="/blog">Blog</a></li>
-                                <li><a href="/index.html">My CV</a></li>
+                                <li><a href="/cv">My CV</a></li>
                         </ul>
                 </div>
                 	<div class="main">
