added icons, links to footer

--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ body {
 
 #lsb ul li {
 	display: block;
-	text-align: right;
+	text-align: center;
 	padding: 10px;
 	background-color: #032149;	
 }
