--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@
                         <br></br>
                         <ul>
 				<li><a href="/index.html"><i class="fa fa-home fa-fw"></i>&nbsp; Home</a></li>
-                                <li><a href="/index.html">About</a></li>
-                                <li><a href="/blog">Blog</a></li>
-                                <li><a href="/cv">My CV</a></li>
+				<li><a href="/index.html"><i class="fa fa-eye fa-fw"></i>&nbsp; About</a></li>
+				<li><a href="/blog"><i class="fa fa-pencil-square-o fa-fw"></i>&nbsp; Blog</a></li>
+				<li><a href="/cv"><i class="fa fa-trophy fa-fw"></i>&nbsp; My CV</a></li>
                         </ul>
                 </div>
                 	<div class="main">
@@ -25,7 +25,8 @@
      			</div>
                 <div id="foot">
 			<a href="mailto:matejpribis@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
-			<!--<a href=""></a>-->
+			<a href="https://cz.linkedin.com/in/pribism"><i class="fa fa-linkedin fa-2x"></i></a>
+			<a href="https://www.facebook.com/matej.pribis"><i class="fa fa-facebook fa-2x"></i></a>
 
                 </div>
         </body>
