test for links in footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
      			</div>
                 <div id="foot">
 			<a href="mailto:matejpribis@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
+			<a href="mailto:matejpribis@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
 			<a href="https://cz.linkedin.com/in/pribism"><i class="fa fa-linkedin fa-2x"></i></a>
 			<a href="https://www.facebook.com/matej.pribis"><i class="fa fa-facebook fa-2x"></i></a>
 
