--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,7 @@ body {
 	/*color: #222;
 	text-shadow: 0px 2px 3px #555;*/
 	line-height: 0.8em;
+	padding: 10px;
 }
 
 #lsb ul, #foot ul {
@@ -76,18 +77,19 @@ body {
 #lsb ul li {
 	display: block;
 	text-align: center;
-	padding: 10px;
+	padding: 10px 10px 10px -40px;
 	background-color: #032149;	
 }
 
 #lsb ul li:hover {
 	background-color: #838996;
+	color: #032149;
 }
 
 #lsb ul li a {
 	text-decoration: none;
 	padding: 10px;
-	border-left: 1px solid black;
+	/*border-left: 1px solid black;*/
 	color:#979aaa; 
 }
 
@@ -115,6 +117,9 @@ p {
 }
 
 #foot a {
-	margin: 30px;
-	text-align: center;	
+	display: inline;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 30px;
+	margin-bottom: 30px;	
 }
