fixed the flavicon, name, sidebar

--- a/css/main.css
+++ b/css/main.css
@@ -1,120 +1,291 @@
-/*stylesheet for page*/
+/*****************************************************************************/
+/*
+/* Common
+/*
+/*****************************************************************************/
 
 * {
-	/*font-family: Verdana, Geneva, sans-serif;*/
-	font-family:'Helvetica', 'Arial', 'Sans-Serif';		
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
+  -webkit-font-smoothing: antialiased;
 }
 
 body {
-	background-color: #e5e5e5;
-}
-#lsb {
-	position: fixed;
-	height:100%;
-	width: 250px;
-	/**border: 2px solid red;**/
-	padding-top: 30px;
-	padding-bottom: 30px;
-	background-color: #032149;
-	color: #e5e5e5;
+  color: #4a4a4a;
+  background-color: #fafbfc;
+  font-family: 'Raleway', Arial, sans-serif;
+  font-weight: 400;
+  font-size: 0.85em;
+  overflow: hidden;
 }
 
-#lsb h3 {
-	text-align: center;
-	color: #e5e5e5;
-	padding: 0 5px 0 5px;
+a {
+  color: #8085C1;
+  text-decoration: none;
+  border: none;
 }
 
-.main{
-	position: relative;
-	margin-left: 250px;
-	padding: 50px;
-	/**border: 2px solid blue;**/
-	height: 100%;
-	background-color: #e5e5e5;
+a img {
+  outline: none;
 }
 
-#foot {
-	position: absolute;
-	margin-left: 250px;
-	height: 40px;
-	clear: both;
-	/**border: 2px solid black;**/
+a:hover {
+  color: #555;
+  border: none;
 }
 
-#avatar {
-	display: block;
-	width: 100px;
-	border-radius: 10%;
-	margin-left: auto;
-	margin-right: auto;
+.separator {
+  color: #555;
 }
 
-
-#name {
-	text-align: center;
-	line-height: 1.2em;
-	/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
-	font-weight: normal;
-	font-size:1.2em;
-	padding-top: 20px;
-	text-transform: capitalize;
+/*****************************************************************************/
+/*
+/* Home
+/*
+/*****************************************************************************/
+#logo {
+  max-width: 128px;
 }
 
-#uni {
-	text-align: center;
-	font: 15px Tahoma, Helvetica, Arial, Sans-Serif;
-	/*color: #222;
-	text-shadow: 0px 2px 3px #555;*/
-	line-height: 0.8em;
+.posts a {
+  color: #444;
 }
 
-#lsb ul, #foot ul {
-	list-style: none;
+.posts a:hover {
+  color: #777;
 }
 
-#lsb ul li {
-	display: block;
-	text-align: center;
-	padding: 10px;
-	background-color: #032149;	
+.posts-list {
+  list-style-type: none;
 }
 
-#lsb ul li:hover {
-	background-color: #838996;
+.posts-list li {
+  text-align: center;
+  line-height: 1.75em;
 }
 
-#lsb ul li a {
-	text-decoration: none;
-	padding: 10px;
-	border-left: 1px solid black;
-	color:#979aaa; 
+/*****************************************************************************/
+/*
+/* Site
+/*
+/*****************************************************************************/
+
+.site {
+  height: 100%;
+  width: 100%;
+  line-height: 1.25em;
 }
 
-p {
-	font-size: 1.2em;
-	line-height: 1.2em;
-	display: block-inline;
+.title {
+  display: inline-block;
+  text-align: center;
+  line-height: 25px;
 }
 
-.main #indexm {
-	position: absolute;
-	top: 100px;
-	left: 550px;
+.tagline {
+  width: 100%;
+  color: #787878;
+  font-weight: 600;
+  text-align: center;
+  margin-top: 0.5em;
+  display: block;
 }
 
-
-.main img {
-	width:400px;
-	display: inline-block;
-	position: absoulte;
-	left: 200px;
-	top: 50px;
-
-	
+.posts {
+  border-top: 1px solid #e7e7e7;
+  margin-top: 1em;
+  padding-top: 1.5em;
+  padding-bottom: 1.25em;
 }
 
-#foot a {
-	margin: 30px;
-	text-align: center;	
+.footer {
+  font-size: 0.95em;
+  border-top: 1px solid #e7e7e7;
+  padding-top: 1.25em;
+  padding-bottom: 1.5em;
+  overflow: hidden;
+  float: center;
+  text-align: center;
+}
+
+/*****************************************************************************/
+/*
+/* Posts
+/*
+/*****************************************************************************/
+
+#date {
+  font-size: 16px;
+  padding-top: 0.25em;
+  margin-bottom: 2em;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #787878;
+}
+
+#cover-photo-container,
+#info-container {
+  display: block;
+}
+
+#info-container {
+  margin-top: 3em;
+}
+
+#title {
+  color: #4a4a4a;
+  margin-bottom: 0.35em;
+  font-size: 3em;
+  line-height: 40px;
+  text-transform: uppercase;
+}
+
+.post {
+  line-height: 24px;
+  max-width: 725px;
+  clear: both;
+}
+
+.post h2 {
+  margin-top: 1.25em;
+  margin-left: -0.5em;
+  margin-bottom: 1.25em;
+}
+
+.post a,
+#about a {
+  border-bottom: 1px solid #8085C1;
+}
+
+.post a:hover {
+  border: none;
+}
+
+/* standard */
+.post pre {
+  border: 1px solid #ddd;
+  background-color: #eef;
+  padding: 0 .4em;
+}
+
+.post p {
+  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-size: 17px;
+  margin-bottom: 1.45em;
+  text-align: justify;
+}
+
+.post ul, .post ol {
+  margin-left: 2.35em;
+  margin-bottom: 1.25em;
+}
+
+.post code {
+  border: 1px solid #ddd;
+  background-color: #eef;
+  padding: 0 .2em;
+}
+
+.post pre code {
+  border: none;
+}
+
+/* terminal */
+.post pre.terminal {
+  border: 1px solid #000;
+  background-color: #333;
+  color: #FFF;
+}
+
+.post pre.terminal code {
+  background-color: #333;
+}
+
+/*****************************************************************************/
+/*
+/* Sidebar and Content
+/*
+/*****************************************************************************/
+
+.sidebar,
+.content {
+  vertical-align: top;
+  height: 100%;
+  -webkit-overflow-scrolling: touch;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.sidebar {
+  float: left;
+  width: 14%;
+  padding-left: 11em;
+  padding-right: 2.125em;
+  border-right: 1px solid #e7e7e7;
+}
+
+.content {
+  padding-left: 2.125em;
+}
+
+.header {
+  text-align: center;
+  padding-top: 2.5em;
+  font-size: 1.1em;
+}
+
+.post-link {
+  margin-bottom: 0.75em;
+}
+
+.post-title {
+  font-weight: 600;
+  font-size: 1.25em;
+  text-transform: uppercase;
+}
+
+.post-date {
+  color: #8a8a8a;
+  font-family: Monaco, "Courier New", monospace;
+  font-weight: 600;
+  font-size: 0.65em;
+  display: block;
+  text-transform: uppercase;
+}
+
+#sidebar-button {
+  height: intrinsic;
+  cursor: pointer;
+  display: none;
+  padding: 15px 5px 0px 0px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #e7e7e7;
+}
+
+#sidebar-button:active,
+#sidebar-button:hover {
+  opacity: 0.7;
+}
+
+/*****************************************************************************/
+/*
+/* Colophon
+/*
+/*****************************************************************************/
+
+.colophon {
+  margin-top: 1.5em;
+  margin-bottom: 1.45em;
+  border-top: 1px dotted #e7e7e7;
+}
+
+.colophon p {
+  margin-top: 1.25em;
+  font-size: 0.95em;
+  color: #777;
 }
