--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,9 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <title>{{ page.title }}</title>
       <meta name="viewport" content="width=device-width">
+      <link href="/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
-      <-- flavicon -->
+      <!-- flavicon -->
       <link rel="icon" href="/images/logo.png">
 
       <!-- syntax highlighting CSS -->
@@ -48,9 +49,15 @@
         </div>
         <div class="footer">
           <span id="footer-links">
-            <a href="" class="footer-link">About</a> <span class="separator">&bull;</span>
+	    <a target="_blank" rel="noopener noreferrer" href="mailto:matejpribis@gmail.com"><i class="fa fa-envelope fa-2x"></i><span class="separator">&ensp;</span>
+	    <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/matej.pribis"><i class="fa fa-facebook fa-2x"></i><span class="separator">&ensp;</span>
+	    <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/pribism/"><i class="fa fa-linkedin fa-2x"></i><span class="separator">&ensp;</span>
+	    <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/MatejPribis"><i class="fa fa-twitter fa-2x"></i>
+	    <!--
+	    <a href="{{ site.baseurl }}/index.html"><i class="fa fa-facebook fa-2x"></i><span class="separator">&ensp;</span>
+	    <a href="" class="footer-link">About</a> <span class="separator">&bull;</span>
             <a href="" class="footer-link">Twitter</a> <span class="separator">&bull;</span>
-            <a href="" class="footer-link">GitHub</a>
+	    <a href="" class="footer-link">GitHub</a> -->
           </span>
         </div>
       </div>
