site menu creation

--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,38 @@ a:hover {
 
 /*****************************************************************************/
 /*
+/* Menu 
+/*
+/*****************************************************************************/
+
+.menu {
+  border-top: 1px solid #e7e7e7;
+  margin-top: 1em;
+  padding-top: 1.5em;
+  padding-bottom: 0.0em;
+}
+
+
+.menu-list {
+  list-style-type: none;
+}
+
+.menu-list li {
+  text-align: center;
+  line-height: 1.75em;
+}
+
+.menu-link {
+  margin-bottom: 0.75em;
+}
+
+.menu-title {
+  font-weight: 600;
+  font-size: 1.5em;
+}
+
+/*****************************************************************************/
+/*
 /* Colophon
 /*
 /*****************************************************************************/
