--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,20 @@
+---
+menu:
+  - title: Blog
+    url: ""
+  - title: Books
+    url: ""
+  - title: Talks
+    url: ""
+  - title: Papers
+    url: ""
+  - title: About me
+    url: ""
+  - title: CV
+    url: ""
+
+food: "pizza"
+---
 <!DOCTYPE html>
 <html>
   <head>
@@ -33,8 +50,28 @@
           <span class="tagline">Neuroscientist and children psychiatrist</span>
         </div>
 	<!-- Menu -->
-	<!--<div class="menu">
-	</div> -->
+	<div class="menu">
+          <ul class="menu-list">
+	      <li class="menu-link">
+		<a class="menu-title" href="">Blog</a>
+	      </li>
+              <li class="menu-link">
+		<a class="menu-title" href="">Books</a>
+	      </li>
+	      <li class="menu-link">
+		<a class="menu-title" href="">Talks</a>
+	      </li>
+	      <li class="menu-link">
+		<a class="menu-title" href="">Papers</a>
+	      </li>
+	      <li class="menu-link">
+		<a class="menu-title" href="">About me</a>
+	      </li>
+	      <li class="menu-link">
+		<a class="menu-title" href="">CV</a>
+	      </li>
+          </ul>
+	</div>
         <div class="posts">
           <ul class="posts-list">
             {% for post in site.posts %}
@@ -49,11 +86,12 @@
         </div>
         <div class="footer">
           <span id="footer-links">
-	    <a target="_blank" rel="noopener noreferrer" href="mailto:matejpribis@gmail.com"><i class="fa fa-envelope fa-2x"></i><span class="separator">&ensp;</span>
-	    <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/matej.pribis"><i class="fa fa-facebook fa-2x"></i><span class="separator">&ensp;</span>
-	    <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/pribism/"><i class="fa fa-linkedin fa-2x"></i><span class="separator">&ensp;</span>
-	    <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/MatejPribis"><i class="fa fa-twitter fa-2x"></i>
-	    <!--
+	     <a target="_blank" rel="noopener noreferrer" href="mailto:matejpribis@gmail.com"><i class="fa fa-envelope fa-2x"></i></a><span class="separator">&ensp;</span>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/matej.pribis"><i class="fa fa-facebook fa-2x"></i></a><span class="separator">&ensp;</span>
+	    <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/pribism/"><i class="fa fa-linkedin fa-2x"></i></a><span class="separator">&ensp;</span>
+	    <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/MatejPribis"><i class="fa fa-twitter fa-2x"></i></a><span class="separator">&ensp;</span>
+            <a target="_blank" rel="noopener noreferrer" href="https://dennikn.sk/autor/mpribis/"><i class="fa fa-rss fa-2x"></i></a>
+		  <!-- original footer
 	    <a href="{{ site.baseurl }}/index.html"><i class="fa fa-facebook fa-2x"></i><span class="separator">&ensp;</span>
 	    <a href="" class="footer-link">About</a> <span class="separator">&bull;</span>
             <a href="" class="footer-link">Twitter</a> <span class="separator">&bull;</span>
