--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
 	      <a class="menu-title" href="">Papers</a>
 	    </li>
 	    <li class="menu-link">
-	      <a class="menu-title" href="">About me</a>
+	      <a class="menu-title" href="/page.html">About me</a>
 	    </li>
 	    <li class="menu-link">
 	      <a class="menu-title" href="">CV</a>
