--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,6 +83,14 @@
         </div>
       </div>
 
+	<!--<div id="cover-photo-container">
+      <img id="cover-photo" src="/images/{{ page.cover }}">
+    	</div> --> 
+	    
+	<div id="cover-photo-container">
+      <img id="cover-photo" src="/images/cover.jpg">
+    	</div>
+	    
         {{ content }}
 
     </div>
