link about.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,10 +45,10 @@
 	      <a class="menu-title" href="">Talks</a>
 	    </li>
 	    <li class="menu-link">
-	      <a class="menu-title" href="">Papers</a>
+	      <a class="menu-title" href="/page.html">Papers</a>
 	    </li>
 	    <li class="menu-link">
-	      <a class="menu-title" href="/page.html">About me</a>
+	      <a class="menu-title" href="/about.html">About me</a>
 	    </li>
 	    <li class="menu-link">
 	      <a class="menu-title" href="">CV</a>
