--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <title>{{ page.title }}</title>
-      <meta name="viewport" content="width=device-width">
+      <meta name="viewport" content="width=device-width, initial_scale=0.5">
       <link href="/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
       <!-- flavicon -->
