Fixed Links in Menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 	<div class="menu">
           <ul class="menu-list">
 	    <li class="menu-link">
-	      <a class="menu-title" href="">Blog</a>
+	      <a class="menu-title" href="/blog/">Blog</a>
 	    </li>
             <li class="menu-link">
 	      <a class="menu-title" href="">Books</a>
@@ -51,7 +51,7 @@
 	      <a class="menu-title" href="/about.html">About me</a>
 	    </li>
 	    <li class="menu-link">
-	      <a class="menu-title" href="">CV</a>
+	      <a class="menu-title" href="/cv/Curriculum_Vitae_of_Matej_Pribis_Medizin.pdf">CV</a>
 	    </li>
           </ul>
 	</div>
