--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,15 +38,16 @@
 	    <li class="menu-link">
 	      <a class="menu-title" href="/blog/">Blog</a>
 	    </li>
-            <li class="menu-link">
+            <!-- Menu
+	    <li class="menu-link">
 	      <a class="menu-title" href="">Books</a>
-	    </li>
+	    </li> 
 	    <li class="menu-link">
 	      <a class="menu-title" href="">Talks</a>
 	    </li>
 	    <li class="menu-link">
 	      <a class="menu-title" href="/page.html">Papers</a>
-	    </li>
+	    </li> -->
 	    <li class="menu-link">
 	      <a class="menu-title" href="/about.html">About me</a>
 	    </li>
